tests/neg/i23504.scala
def test =
  Seq.empty[[T] =>> () => ?].head() // error